# ArXivFlow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .protolock  .prototools  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: format.yml  lint.yml
.moon/: toolchains.yml  workspace.yml
apps/api/: .env.example  Dockerfile  moon.yml  pyproject.toml
apps/api/k8s/: api-deployment.yml
apps/api/scripts/: clean.sh  entrypoint.sh
apps/api/src/: build_atlas.py  config.py  main.py  query_encoder.py  schemas.py  store.py
apps/api/src/routers/: embeddings.py  papers.py  search.py
apps/api/src/utils/: __init__.py  logger.py
apps/client/: .prettierignore  .prettierrc  Dockerfile.tera  bunfig.toml  eslint.config.mjs  moon.yml  next.config.ts  package.json  tsconfig.json
apps/client/k8s/: client-deployment.yml
apps/client/src/app/: layout.tsx  page.tsx  providers.tsx
apps/client/src/app/api/[...path]/: route.ts
apps/client/src/app/atlas/: page.tsx
apps/client/src/app/paper/[id]/: page.tsx
apps/client/src/app/search/: page.tsx
apps/client/src/components/feed/: PaperCard.tsx
apps/client/src/components/layout/: AppShell.tsx  TopBar.tsx
apps/client/src/components/settings/: SettingsPanel.tsx
apps/client/src/components/shared/: CatPill.tsx  Icon.tsx  LatencyBadge.tsx  SimRing.tsx  States.tsx
apps/client/src/lib/: api.ts  categories.tsx  format.ts  theme.tsx  types.ts  useApi.ts
apps/client/src/styles/: main.scss
apps/client/src/styles/abstracts/: _functions.scss  _index.scss  _mixins.scss  _variables.scss
apps/client/src/styles/base/: _base.scss  _reset.scss
apps/client/src/styles/components/: _buttons.scss  _latency.scss  _ring.scss  _settings.scss  _states.scss
apps/client/src/styles/layout/: _stage.scss  _topbar.scss
apps/client/src/styles/pages/: _atlas.scss  _detail.scss  _feed.scss  _search.scss
apps/client/src/styles/themes/: _tokens.scss
k8s/: inspect-pvc.yml  pvc.yml
