[project]
name = "api"
version = "1.0.0"
description = "ArXivFlow backend - Serves the recommender(s) and API endpoints."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adapters",
    "chromadb",
    "fastapi",
    "orjson",
    "pandas",
    "python-dotenv",
    "rank-bm25",
    "scikit-learn",
    "torch",
    "transformers",
    "umap-learn",
    "uvicorn[standard]",
]

[dependency-groups]
# umap-learn + scikit-learn build the 2D atlas (src/build_atlas.py). The container builds the atlas
# at startup (scripts/entrypoint.sh) when it is absent from the PVC, so they now ship in the serving
# image via [project.dependencies] rather than being dev-only.
dev = [
    "black",
    "pylint",
    "ruff",
]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.pylint.main]
ignore = [
    ".venv",
    "__pycache__"
]

[tool.pylint.format]
max-line-length = 120

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
